--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "flow-bin": "^0.86.0",
+    "flow-remove-types": "^1.2.3",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
